--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -36,6 +42,7 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 
 </project>
